fix(event-page): Fixe issues with z-index and header size
ref #174

--- a/apps/mull-ui/src/app/components/navigation/top-nav-bar/top-nav-bar.scss
+++ b/apps/mull-ui/src/app/components/navigation/top-nav-bar/top-nav-bar.scss
@@ -13,6 +13,7 @@
   align-items: center;
   justify-content: space-around;
   padding: 0.7em 0;
+  z-index: 3;
 }
 
 .logo {
